My first commit

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
                 <% } %>
                 <form action="/signup" method="POST">
                     <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
+                        <label for="userName" class="form-label">Username</label>
                         <input type="text" class="form-control" id="userName" name="userName">
                       </div>
                     <div class="mb-3">
