--- a/views/post.ejs
+++ b/views/post.ejs
@@ -5,14 +5,17 @@
       <h2><%= post.title %></h2>
       <img class="img-fluid" src="<%= post.image%>" />
       <div class="row justify-content-between">
-        <form
+<!--        <form
           class="col-1"
           action="/post/likePost/<%= post.id %>?_method=PUT"
           method="POST"
         >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
-        </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
+<form method="POST" action="/like/<%= post._id %>">
+    <button class="btn btn-primary fa fa-heart" type="submit"></button>
+</form>
+<h3 class="col-3">Likes: <%= post.likes %></h3>
+-->
+
         <%if(post.user == user.id){ %>
         <form
           action="/post/deletePost/<%= post.id %>?_method=DELETE"
@@ -29,7 +32,7 @@
     </div>
     <div class="col-6 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+      <a class="btn btn-primary" href="/feed">Return to Medication List</a>
     </div>
   </div>
 </div>
